# autograph

./: .gitignore  CMakeLists.txt  README.md  adjacency_matrix.csv  test.csv
examples/: adjacency_matrix.csv  animate.sh  autodot.sh  big_example.csv  input.dot  med_mat.csv  medium_matrix.csv  small_matrix.csv  test.csv
include/: autograph.hpp
src/: autograph.py  main.cpp
